--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ lettuce==0.2.19
 mock==1.0.1
 nose==1.3.3
 nose-cov==1.6
+nose-lettuce==0.1
 python-termstyle==0.1.10
 rednose==0.4.1
 requests==2.3.0
