update requirements with robotframeworks

--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ nose-lettuce==0.1
 python-termstyle==0.1.10
 rednose==0.4.1
 requests==2.3.0
+robotframework==2.8.4
 six==1.7.3
 sure==1.2.7
 waitress==0.8.9
