--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ mock==1.0.1
 nose==1.3.3
 nose-cov==1.6
 nose-lettuce==0.1
+pycallgraph==1.0.1
 python-termstyle==0.1.10
 rednose==0.4.1
 requests==2.3.0
