--- a/requirements.txt
+++ b/requirements.txt
@@ -5,17 +5,20 @@ WebOb==1.4
 WebTest==2.0.15
 Werkzeug==0.9.6
 argparse==1.2.1
+astroid==1.1.1
 beautifulsoup4==4.3.2
 cov-core==1.13.0
 coverage==3.7.1
 fuzzywuzzy==0.2
 itsdangerous==0.24
 lettuce==0.2.19
+logilab-common==0.62.0
 mock==1.0.1
 nose==1.3.3
 nose-cov==1.6
 nose-lettuce==0.1
 pycallgraph==1.0.1
+pylint==1.2.1
 python-termstyle==0.1.10
 rednose==0.4.1
 requests==2.3.0
